// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHistory.vue should be rendered correctly 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <search-input-stub
      autofocus="true"
      class="history--search"
      placeholder="Filter by Address, Symbol, Type or Block ID"
      value=""
    />
     
    <div
      class="history-items"
    >
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** VAL To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** VAL To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnVFi...P2nse
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Swap"
          >
            Swap
          </div>
           
          <div
            class="history-item-title p4"
          >
            Failed to swap ****** XOR for ****** PSWAP
          </div>
           
          <s-icon-stub
            class="info-status info-status--error"
            name="basic-clear-X-xs-24"
          />
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="AddLiquidity"
          >
            Add Liquidity
          </div>
           
          <div
            class="history-item-title p4"
          >
            Supplied ****** XOR and ****** PSWAP
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="RemoveLiquidity"
          >
            Remove Liquidity
          </div>
           
          <div
            class="history-item-title p4"
          >
            Removed ****** XOR and ****** PSWAP
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
    </div>
     
    <history-pagination-stub
      currentpage="1"
      lastpage="2"
      pageamount="8"
      total="9"
    />
  </s-form-stub>
</div>
`;

exports[`WalletHistory.vue should render error icon when transaction is failed 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <search-input-stub
      autofocus="true"
      class="history--search"
      placeholder="Filter by Address, Symbol, Type or Block ID"
      value=""
    />
     
    <div
      class="history-items"
    >
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** VAL To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** VAL To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Failed to send ****** XOR to cnVFi...P2nse
          </div>
           
          <s-icon-stub
            class="info-status info-status--error"
            name="basic-clear-X-xs-24"
          />
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
    </div>
     
    <!---->
  </s-form-stub>
</div>
`;

exports[`WalletHistory.vue should render history empty text when no transacion 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <!---->
     
    <div
      class="history-items"
    >
      <div
        class="history-empty p4"
      >
        Your transactions will appear here
      </div>
    </div>
     
    <!---->
  </s-form-stub>
</div>
`;

exports[`WalletHistory.vue should render spinner when transaction is pending 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <search-input-stub
      autofocus="true"
      class="history--search"
      placeholder="Filter by Address, Symbol, Type or Block ID"
      value=""
    />
     
    <div
      class="history-items"
    >
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** VAL To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** VAL To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
        role="button"
        tabindex="0"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ****** XOR To cnVFi...P2nse
          </div>
           
          <s-icon-stub
            class="info-status info-status--loading"
            name="refresh-16"
          />
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
    </div>
     
    <!---->
  </s-form-stub>
</div>
`;
